<resources>
    <string name="app_name" translatable="false"></string>
    <string name="Conversion" translatable="false">Conversion</string>
    <string name="Shopping" translatable="false">Shopping</string>
    <string name="Language" translatable="false">Language</string>

    <string name="Temperature" translatable="false">Temperature conversion</string>
    <string name="Distance" translatable="false">Distance conversion</string>

    <string name="CelsiusToFahrenheit" translatable="false">Celsius to Fahrenheit</string>
    <string name="FahrenheitTOCelsius" translatable="false">Fahrenheit to Celsius</string>

    <string name="MilestoKm" translatable="false">Miles to Km</string>
    <string name="KmtoMiles" translatable="false">Km to Miles</string>

    <string name="CB" translatable="false">Convert</string>
    <string name="Result" translatable="false">Result</string>

    <string name="userName" translatable="false">User Name</string>
    <string name="pass" translatable="false">Password</string>
    <string name="wantToBuy" translatable="false">want to buy</string>
    <string name="smartPhones" translatable="false">Smart phones</string>
    <string name="digitalPanels" translatable="false">digital panels</string>
    <string name="payBy" translatable="false">payment method</string>
    <string name="creditCard" translatable="false">credit card</string>
    <string name="paiementWhenRecieving" translatable="false">Paiement when recieving</string>
    <string name="cheque" translatable="false">Cheque</string>
    <string name="sendTheRequest" translatable="false">Send the request</string>

    <string name="alertMessage" translatable="false">Are you sure you entered correct information and want to continue?</string>
    <string name="alertTitle" translatable="false">Verification letter!</string>

    <string name="support" translatable="false">Support</string>
    <string name="about" translatable="false">About</string>


</resources>