<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Temperature"
        android:title="@string/Temperature"
        app:showAsAction="always"/>

    <item
        android:id="@+id/Distance"
        android:title="@string/Distance"
        app:showAsAction="always" />

    <item
        android:title="@string/Distance"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_menu_open_24">


        <menu>

            <item
                android:id="@+id/support"
                android:title="@string/support"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/about"
                android:title="@string/about"
                app:showAsAction="never"
                />




        </menu>





    </item>

</menu>