<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/Conversion"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:title="@string/Conversion"
        app:showAsAction="always" />

    <item
        android:id="@+id/Shopping"
        android:title="@string/Shopping"
        app:showAsAction="always" />


    <item
        android:id="@+id/NM"
        android:title="@string/Language"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/AR"
                android:title="AR"></item>


            <item
                android:id="@+id/EN"
                android:title="EN"></item>



        </menu>


    </item>


</menu>